--- a/src/semantic/theme.config
+++ b/src/semantic/theme.config
@@ -32,6 +32,7 @@
 @input      : 'default';
 @label      : 'default';
 @list       : 'default';
+@placeholder: 'default';
 @loader     : 'default';
 @rail       : 'default';
 @reveal     : 'default';
