--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-less": "^2.0.0-beta.5",
     "gatsby-plugin-react-helmet": "next",
     "less": "^2.7.3",
+    "lodash": "^4.17.11",
     "nuka-carousel": "^4.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
