--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "1.0.0",
   "author": "Richard Blechinger <me@blechi.at>",
   "dependencies": {
+    "async": "^2.6.1",
+    "cheerio": "^1.0.0-rc.2",
     "gatsby": "next",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-less": "^2.0.0-beta.5",
     "gatsby-plugin-react-helmet": "next",
+    "invert-color": "^2.0.0",
     "less": "^2.7.3",
     "lodash": "^4.17.11",
+    "nearest-pantone": "^1.0.1",
     "nuka-carousel": "^4.4.1",
     "react": "^16.4.1",
+    "react-color": "^2.14.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-slick": "^0.23.1",
